[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/CardDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SceneScripts/DraftBooster.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/UI/DeckDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/SettingsPage.tscn" type="PackedScene" id=5]

[node name="Draft" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoosterDisplay" parent="." instance=ExtResource( 1 )]
margin_top = 44.0
margin_bottom = 84.0
z_index = 2

[node name="CardDisplay" parent="." instance=ExtResource( 1 )]
margin_top = -148.0
margin_bottom = -108.0
viewMul = 0.6
z_index = 20

[node name="QuitButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 76.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 104.0
margin_right = 152.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="CenterControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDisplayControl" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDisplay" parent="DeckDisplayControl" instance=ExtResource( 4 )]
position = Vector2( -120, 75 )

[node name="BoosterNum" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = 140.0
margin_right = 27.5
margin_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pack: "
align = 1
valign = 1

[node name="SettingsHolder" type="Node2D" parent="."]
z_index = 99

[node name="SettingsPage" parent="SettingsHolder" instance=ExtResource( 5 )]
margin_left = 329.5
margin_top = 219.0
margin_right = 694.5
margin_bottom = 381.0

[connection signal="pressed" from="QuitButton" to="." method="onQuitButtonPressed"]
[connection signal="pressed" from="SettingsButton" to="." method="onSettingsPressed"]
